--- a/CapAngular/src/app/componenti/navbar/navbar/navbar.component.html
+++ b/CapAngular/src/app/componenti/navbar/navbar/navbar.component.html
@@ -1,34 +1,44 @@
 <nav class="navbar navbar-expand-lg bg-dark border-bottom">
   <div class="container-fluid">
-    <a [routerLink]="['/']" routerLinkActive="active"><img src="../../../../assets/img/transparent-shark-bruce-disney-emoji-blitz-wiki-fandom-powered-by-wi5e72c354b42ba4.824431541584579412738.png"></a>
-      <a class="navbar-brand fw-semibold text-danger d-none d-sm-block" [routerLink]="['/']" routerLinkActive="active">SharkTest</a>
-      <button class="navbar-toggler bg-danger" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
-          aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse text-center" id="navbarNav">
-          <ul class="navbar-nav">
-              <li class="nav-item" *ngIf="!user">
-                  <a class="nav-link active text-white ms-1" aria-current="page" [routerLink]="['auth/login']" routerLinkActive="active" [routerLinkActiveOptions]="{exact: true}">Login</a>
-              </li>
-              <li class="nav-item">
-                  <a class="nav-link text-white ms-1"  *ngIf="user" [routerLink]="['test']" routerLinkActive="active">Test</a>
-              </li>
-              <div class="dropdown" *ngIf="user">
-                <a class="btn btn-secondary nav-link text-white ms-1 dropdown-toggle" routerLinkActive="active" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                 Profile
-                </a>
-                <ul class="dropdown-menu text-center">
-                  <li><a class="dropdown-item" [routerLink]="['/profilo/dettagli/', user.id]">More Info</a></li>
-                  <li><a class="dropdown-item" [routerLink]="['profilo/grades', user.id]">Grades</a></li>
-                </ul>
-              </div>
-
-              <li class="nav-item" *ngIf="!user">
-                  <a class="nav-link text-white ms-1" [routerLink]="['auth/register']" routerLinkActive="active">Subscribe</a>
-              </li>
+    <a [routerLink]="['/']" routerLinkActive="active"><img
+        src="../../../../assets/img/transparent-shark-bruce-disney-emoji-blitz-wiki-fandom-powered-by-wi5e72c354b42ba4.824431541584579412738.png"></a>
+    <a class="navbar-brand fw-semibold text-danger d-none d-sm-block" [routerLink]="['/']"
+      routerLinkActive="active">SharkTest</a>
+    <button class="navbar-toggler bg-danger" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+      aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse text-center" id="navbarNav">
+      <ul class="navbar-nav">
+        <li class="nav-item" *ngIf="!user">
+          <a class="nav-link active text-white ms-1" aria-current="page" [routerLink]="['auth/login']"
+            routerLinkActive="active" [routerLinkActiveOptions]="{exact: true}">Login</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link text-white ms-1" *ngIf="user" [routerLink]="['test']" routerLinkActive="active">Test</a>
+        </li>
+        <div class="dropdown" *ngIf="user">
+          <a class="btn btn-secondary nav-link text-white ms-1 dropdown-toggle" routerLinkActive="active" role="button"
+            data-bs-toggle="dropdown" aria-expanded="false">
+            Profile
+          </a>
+          <ul class="dropdown-menu text-center">
+            <li><a class="dropdown-item" [routerLink]="['/profilo/dettagli/', user.id]">More Info</a></li>
+            <li><a class="dropdown-item" [routerLink]="['profilo/grades', user.id]">Grades</a></li>
           </ul>
-          <button type="button" class="btn btn-danger ms-2 float-end rounded-pill text-white" *ngIf="user" (click)="logout()">Logout</button>
-      </div>
+        </div>
+
+        <li class="nav-item" *ngIf="!user">
+          <a class="nav-link text-white ms-1" [routerLink]="['auth/register']" routerLinkActive="active">Subscribe</a>
+        </li>
+      </ul>
+      <button type="button" class="btn btn-danger ms-2 float-end rounded-pill text-white" *ngIf="user"
+        (click)="logout()">Logout</button>
+    </div>
+    <div>
+      <a href="https://www.linkedin.com/in/francesca-vic-arata93/" class="btn p-0 me-2" target="_blank"><i
+          class="bi bi-linkedin text-danger fs-5"></i></a>
+      <a href="https://github.com/Tyorna" class="btn p-0" target="_blank"><i class="bi bi-github text-danger fs-5"></i></a>
+    </div>
   </div>
 </nav>
